# nerthus-medical-ml

./: .gitignore  AUTHORS.txt  README.md  pyproject.toml  requirements.txt
examples/: nerthus_cnn_champion.py  nerthus_cnn_improved.py  nerthus_cnn_pipeline.py  nerthus_cnn_simple.py  nerthus_cnn_tuning.py  nerthus_comparison.py  nerthus_comparison_plot.py  nerthus_image_analyzer.py  nerthus_image_processor.py  nerthus_ml_pipeline.py
nerthus/: __init__.py  analyzer.py  cli.py  cnn.py  ml.py  processor.py  utils.py
outputs/analysis/: analysis_report.txt  anova_results.csv  image_features.csv  image_metadata.csv  statistical_summary.csv
outputs/cnn/: cnn_performance_report.txt
outputs/cnn/models/: best_cnn_model.keras  nerthus_cnn.keras
outputs/ml/results/: ml_performance_report.txt  overfitting_analysis.json
report/: Makefile  Report.tex  requirements.sh
web/: app.py  debug_cnn.py  loader.py  requirements.txt  run.py  utils.py
web/static/: analysis_report.txt
web/static/models/: CNN.keras  XGBoost.joblib
