[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerthus"
version = "0.1.0"
description = "Medical ML pipeline for bowel preparation quality assessment"
authors = [
    {name = "Kinson VERNET", email = "kinson.vernet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24,<2.2",
    "scikit-learn>=1.2,<1.7",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "kagglehub>=0.1.0",
    "jupyter>=1.0.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "scikit-image>=0.19.0",
    "tqdm>=4.60.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0"
]

[project.scripts]
nerthus-processor = "nerthus.processor:main"
nerthus-analysis = "nerthus.analyzer:main"
nerthus-ml = "nerthus.ml:main"
nerthus-cnn = "nerthus.cnn:main"
nerthus = "nerthus.cli:main"

[tool.setuptools]
packages = ["nerthus"]  # Explicitly tell setuptools which package to include

[tool.setuptools.package-dir]
nerthus = "nerthus"  # Map package name to directory